--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -4,7 +4,7 @@
 /* MAIN
 --------------------------------------------------------- */
 body {
-    font-family: 'source-sans-pro', sans-serif;
+    font-family: 'proggysquare', sans-serif;
     font-size: 1.4rem;
     font-weight: 400;
 }
