--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,5 +1,5 @@
 .title {
-    font-family: 'orpheuspro', serif;
+    font-family: 'proggysquare', serif;
     font-style: normal;
     font-weight: 400;
 
